# Utilities

./: .gitignore  README.md
APPUpdateCreator/Application/: APPUpdateCreator.cpp  APPUpdateCreator.h  APPUpdateCreator_CFG.cpp  APPUpdateCreator_CFG.h  APP_GEN_Defines.h
APPUpdateCreator/CMake/: CMakeLists.txt
APPUpdateCreator/Document/: example.txt
APPUpdateCreator/Sources/: APPUpdateCreator.cpp  APPUpdateCreator_CFG.cpp  APPUpdateCreator_CFG.h  APP_GEN_Defines.h
APPUpdateCreator/assets/: appupdatecreator.ini
Batch/: compile_all_linux.sh  compile_all_windows.bat  erase_all_linux.sh  erase_all_windows.bat
Batch/compile/: compile_all_linux.sh  compile_all_windows.bat  compile_all_windows_format.bat  erase_all_linux.sh  erase_all_windows.bat
Batch/internal/: compile_windows.bat  erase_artifacts.sh
Batch/linux_dependency_installers/: Dependencies Debian.md  install_arm.sh  install_arm64.sh  install_native.sh  install_rpi32.sh
CompileBuilder/Application/: APP_GEN_Defines.h  CompileBuilder.cpp  CompileBuilder.h  CompileBuilder_CFG.cpp  CompileBuilder_CFG.h
CompileBuilder/__assets/: compilebuilder.ini  compilebuilder.lng
CompileBuilder/__assets/scripts/: compile.js  printstatus.js
CompileBuilder/assets/: compilebuilder.ini
CompileBuilder/assets/scripts/: test.g  test.js  test.lua
NewAPPCreator/: APP_GEN_Defines.h  NewAPPCreator.bpr  NewAPPCreator.res  NewAPPCreator.tds  NewAPPCreator.~bpr  NewAPPCreator_CFG.cpp  NewAPPCreator_CFG.h  NewAPPCreator_CFG.~h  Unit1.cpp  Unit1.dfm  Unit1.h
NewAPPCreator/Images/: LOGO_NewAppCreator.psd
NewAPPCreator/Images/Icon/: LOGO_NewAppCreator.psd
NewAPPCreator/assets/: NewAPPCreator.ini  scraperweb.xml
NewAPPCreator/assets/Jigs/console/: APP_GEN_Defines.h  CMakeLists.txt  CMakeSettings.json  jig.cpp  jig.h  jig_CFG.cpp  jig_CFG.h
NewAPPCreator/assets/Jigs/console/Application/: jig_CFG.cpp  jig_CFG.h
NewAPPCreator/assets/templates/console/Application/: APP_GEN_Defines.h  Scripts.cpp  Scripts.h  Scripts_CFG.cpp  Scripts_CFG.h
NewAPPCreator/assets/templates/console/assets/: scripts.ini
TranslateScan/Application/: APP_GEN_Defines.h  TranslateScan.cpp  TranslateScan.h  TranslateScan_CFG.cpp  TranslateScan_CFG.h  TranslateScan_Manager.cpp  TranslateScan_Manager.h  TranslateScan_XEvents.h
TranslateScan/CMake/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  launch.vs.json
TranslateScan/Sources/: APP_GEN_Defines.h  TranslateScan.cpp  TranslateScan_CFG.cpp  TranslateScan_Manager.cpp
TranslateScan/assets/: translatescan.ini
VStudio Extensions/Remarks/: GENExtensions.vsct  MacrosAuthor.txt  Remarks.csproj  Remarks.sln  VSPackage.resx  source.extension.vsixmanifest
VStudio Extensions/Remarks/Sources/: FileHeaderGEN.cs  FunctionGEN.cs  GENExtensions.cs
XTraceMonitor/: APP_GEN_Defines.h  Unit1.cpp  Unit1.dfm  Unit1.h  XTraceMonitor.bpr  XTraceMonitor.cpp  XTraceMonitor.drc  XTraceMonitor.map  XTraceMonitor.res  XTraceMonitor_CFG.cpp  XTraceMonitor_CFG.h
XTraceMonitor/FastMM4991/FastMM/: FastMM4.hpp  FastMM4.pas
XTraceMonitor/FastMM4991/FastMM/CPP Builder Support/: FastMM4BCB.cpp
XTraceMonitor/FastMM4991/FastMM/Translations/Chinese (Simplified)/: FastMM4Options.inc
XTraceMonitor/Microsoft Platform SDK/: convert.bat
XTraceMonitor/Microsoft Platform SDK/include/: AF_Irda.h  AccCtrl.h  AclAPI.h  AclUI.h  ActivScp.h  ActiveDS.h  Admex.h  Adptif.h  AdsHlp.h  AdsProp.h  AdtGen.h  AgtCtl.h  AgtSvr.h  AppAvCap.h  AqAdmTyp.h  Asptlb.h  AtalkWsh.h  AuthZ.h  Authif.h  AviFmt.h  BaseTsd.h  BaseTyps.h  BatClass.h  BiDiSpl.h  Bits.h  BitsMsg.h  BluetoothAPIs.h  CChannel.h  CDONTS.h  CDOSys.h  CGuid.h  CdErr.h  CeLib.h  CertAdm.h  CertBCli.h  CertBase.h  CertCli.h  CertEnc.h  CertExit.h  CertMod.h  (+604 more)
XTraceMonitor/assets/: XTraceMonitor.ini  scraperweb.xml
XTraceMonitor/assets/savedir/: All.rtf
XTraceMonitor/images/: Unit1.cpp  Unit1.dfm  Unit1.h
XTraceMonitor/images/Icon/Icon/: LOGO_XTraceMonitor.psd
XTraceMonitor/images/Icon/old/: icon.psd
XTraceMonitor/images/Internet/: Internet3.psd  Internet3_Little.psd
XTraceMonitor/images/Internet/old/: Internet.psd  Internet2.psd
XTraceMonitor/images/New Icon 2/: images.psd
XTraceMonitor/images/New icon/: Debug 32x32.psd  Debug-256.psd  Debug-48x48.psd
XTraceMonitor/images/Old Buttons/: monkey.AIS
__printf/: AlgebraicToRPN.bat  GetStandardForm.bat  HP-15C Page 49 example.txt  Register your copy of printf.exe.html  Registra tu copia de printf.exe.html  ShowKeyCodes.bat  printf Example 1 - Two var statistics.bat  printf Example 4 - Parameters.bat  printf Example 7 - ReadFile.bat  printf Example 9 - Type files.bat  printf.exe - Arithmetic and Programming.html  printf.exe - Aritmética y Programación.html  printfHelp.bat
printf/: printf - GetKey codes.txt  printf Example 0 - Operations.bat  printf Example 2 - ProcString.bat  printf Example 3 - Index vs Pointer.bat  printf Example 5 - Multiplication table.bat  printf Example 6 - ReadLine.bat  printf Example 8 - Animation.bat  printf Example A - MyTree.bat  printf-Examples.bat  printf.exe- Arithmetic and Programming - DosTips.com.url  printf.txt  printfMake.bat  printfStorage.asm
